# 041-tdd-fastapi

./: Makefile  README.md  compose.prod.yaml  compose.yaml
.github/workflows/: main.yml
server/: .dockerignore  Dockerfile  Dockerfile.prod  conftest.py  entrypoint.sh  fly.toml  pyproject.toml
server/app/: config.py  db.py  main.py  summarizer.py
server/app/api/: crud.py  ping.py  summaries.py
server/app/models/: pydantic.py  tortoise.py
server/db/: create.sql
server/tests/: conftest.py  test_ping.py  test_summaries.py  test_summaries_unit.py
